re PR c++/11468 (Deriving from CNI class java::lang::Object  causing an ICE)

PR c++/11468
	* init.c (build_new_1): Handle error_mark_nodes returned by
	build_java_class_ref.
	(build_java_class_ref): Do not abort compilation, but return
	error_mark_node.  Improve error message.  Fix indentation.

	* g++.dg/other/java2.C: New test.

From-SVN: r114937